--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -13,8 +12,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "moment": "^2.29.4",
+    "mongoose": "^6.6.7",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
